I forgot the 2nd div

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <div>Nav</div>
     <div>Title</div>
     <div>Images</div>
-    <div>Text</div>
-    <div>Text</div>
+    <div>Text1</div>
+    <div>Text2</div>
+    <div>Footer</div>
 </body>
 </html>
