modify made my site look amazing

--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <html>
 <head>
     <title>Intro to CSS</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <div>Nav</div>
-    <div>Title</div>
-    <div>Images</div>
-    <div>Text1</div>
-    <div>Text2</div>
-    <div>Footer</div>
+    <div class="new-border">Nav</div>
+    <div class="new-border title">Title</div>
+    <div class="new-border image">Images</div>
+    <div class="new-border text1">Text1</div>
+    <div class="new-border text2">Text2</div>
+    <div class="new-border footer">Footer</div>
 </body>
 </html>
