added navigation bar to top and styled

--- a/index.html
+++ b/index.html
@@ -5,11 +5,24 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-    <div class="new-border">Nav</div>
+    <nav class="new-border">
+        <ul class="top-nav">
+            <li>Home</li>
+            <li>About</li>
+            <li>Contact Us</li>
+        </ul>
+    </nav>
     <div class="new-border title">Title</div>
     <div class="new-border image">Images</div>
     <div class="new-border text1">Text1</div>
     <div class="new-border text2">Text2</div>
+    <nav>
+        <ul>
+            <li>Tester</li>
+            <li>Tester</li>
+            <li>Tester</li>
+        </ul>
+    </nav>
     <div class="new-border footer">Footer</div>
 </body>
 </html>
