--- a/index.html
+++ b/index.html
@@ -13,7 +13,12 @@
         </ul>
     </nav>
     <div class="new-border title">Title</div>
-    <div class="new-border image">Images</div>
+    <div class="new-border image">
+        <div class="img-box">img 1</div>
+        <div class="img-box">img 2</div>
+        <div class="img-box">img 3</div>
+
+    </div>
     <div class="new-border text1">Text1</div>
     <div class="new-border text2">Text2</div>
     <nav>
