added img folder and modified google.html and google.css

--- a/google.html
+++ b/google.html
@@ -5,6 +5,39 @@
     <link rel="stylesheet" type="text/css" href="google.css">
 </head>
 <body>
-    <h1>Google</h1>
+    <div class="top-nav">
+        <div>Gmail</div>
+        <div>Images</div>
+        <div>Boxes</div>
+        <div>Alarm</div>
+        <div>Logo</div>
+    </div>
+    <div class="center">
+        <img src="img/google-logosmaller.png" alt="">
+    </div>
+    <div class="center-search">
+        <input type="" name="" class="input-field">
+        <center>
+            <div class="top-space">
+                <input type="button" name="" value="Google Search" class="gsearch">
+                <input type="button" name="" value="I'm Feeling Lucky" class="luckysearch">
+            </div>
+        </center>
+    </div>
+    <div class="footer">
+        <div class="fbar">
+            <span class="footer-left">
+                <a>Advertising</a>
+                <a>Business</a>
+                <a>About</a>
+            </span>
+            <span class="footer-right">
+                <a>Privacy</a>
+                <a>Terms</a>
+                <a>Settings</a>
+            </span>
+        </div>
+    </div>
+
 </body>
 </html>
