--- a/google.html
+++ b/google.html
@@ -6,17 +6,18 @@
 </head>
 <body>
     <div class="top-nav">
-        <div>Gmail</div>
-        <div>Images</div>
-        <div>Boxes</div>
-        <div>Alarm</div>
-        <div>Logo</div>
+        <div><a href="Gmail.html">Gmail</a></div>
+        <div><a href="images.html">Images</a></div>
+        <div><a href="boxes.html">Boxes</a></div>
+        <div><a href="alarm.html">Alarm</a></div>
+        <div><a href="logo.html">Logo</a></div>
+        <div class="circle"><center><a href="profile.html">J</a></center></div>
     </div>
     <div class="center">
         <img src="img/google-logosmaller.png" alt="">
     </div>
     <div class="center-search">
-        <input type="" name="" class="input-field">
+        <input type="" name="" class="input-field" placeholder="Search Google or type URL">
         <center>
             <div class="top-space">
                 <input type="button" name="" value="Google Search" class="gsearch">
@@ -27,14 +28,14 @@
     <div class="footer">
         <div class="fbar">
             <span class="footer-left">
-                <a>Advertising</a>
-                <a>Business</a>
-                <a>About</a>
+                <a href="advertising.html">Advertising</a>
+                <a href="business.html">Business</a>
+                <a href="about.html">About</a>
             </span>
             <span class="footer-right">
-                <a>Privacy</a>
-                <a>Terms</a>
-                <a>Settings</a>
+                <a href="privacy.html">Privacy</a>
+                <a href="terms.html">Terms</a>
+                <a href="settings.html">Settings</a>
             </span>
         </div>
     </div>
