--- a/google.html
+++ b/google.html
@@ -3,6 +3,9 @@
 <head>
     <title>Google 2.0</title>
     <link rel="stylesheet" type="text/css" href="google.css">
+    <link rel="icon"
+      type="image/png"
+      href="img/favicon.ico">
 </head>
 <body>
     <div class="top-nav">
