--- a/css2.html
+++ b/css2.html
@@ -6,5 +6,32 @@
 </head>
 <body>
     <h2>2nd day of css</h2>
+
+    <div class="div-block">Div 1</div>
+    <div class="div-block">Div 2</div>
+    <div class="div-block">Div 3</div>
+
+<!-- Inline = margins works only horizontially (left and right)
+    Padding works on all 4 sides - top and bottom may bleed
+    They also can't take a width or height
+-->
+    <div class="div-inline">Div 1</div>
+    <div class="div-inline">Div 2</div>
+    <div class="div-inline">Div 3</div>
+
+<!-- inline-block doen't have the bleeding affect -->
+<br>
+    <div class="div-inline-block">Div 1</div>
+    <div class="div-inline-block">Div 2</div>
+    <div class="div-inline-block">Div 3</div>
+
+<article>
+    <section>A</section>
+    <section>B</section>
+    <section>C</section>
+    <section>D</section>
+</article>
+
+
 </body>
 </html>
